# hopscotch-lib

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-public.yml
src/hopscotch/: __init__.py  _tracking.py  exceptions.py
src/hopscotch/data_processors/: __init__.py  add_clusters.py  add_events.py  add_segment.py  add_start_end_events.py  collapse_events.py  daily_states.py  data_processor.py  drop_segment.py  edit_events.py  filter_events.py  filter_paths.py  rename_events.py  sample_paths.py  split_sessions.py  truncate_paths.py  url_events.py
src/hopscotch/datasets/: ecom.py
src/hopscotch/eventstream/: eventstream.py  schema.py
src/hopscotch/mcp/: playbook.md  server.py
src/hopscotch/metrics/: metric_builder.py
src/hopscotch/static/: widget.css
src/hopscotch/tools/: __init__.py  cluster_analysis.py  funnel.py  segment_overview.py  step_matrix.py  transition_matrix.py
src/hopscotch/widgets/: _esm.py  _html_export.py  cloud.py  cloud_mixin.py  cluster_analysis.py  funnel.py  segment_overview.py  step_matrix.py  step_sankey.py  transition_graph.py
tests/: conftest.py  test_eventstream.py
tests/data_processors/: add_clusters_test.py  add_events_test.py  add_start_end_events_test.py  collapse_events_test.py  daily_states_test.py  edit_events_test.py  filter_events_test.py  filter_paths_test.py  rename_events_test.py  sample_paths.py  segments_test.py  split_sessions_test.py  truncate_paths_test.py  url_events_test.py
tests/tools/: cluster_analysis_test.py  funnel_test.py  segment_overview_test.py  step_matrix_test.py  transition_matrix_test.py
