[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopscotch"
version = "0.2.1"
description = "Clickstream analysis library for Jupyter / Colab / VS Code"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "duckdb>=1.1",
    "anywidget>=0.9",
    "traitlets>=5.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ipykernel",
    "jupyterlab",
    "notebook",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hopscotch"]

[tool.hatch.build.targets.wheel.force-include]
"src/hopscotch/static" = "hopscotch/static"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "pytest>=9.1.0",
]
