[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopscotch-analytics"
version = "0.3.6"
description = "Clickstream analysis library for Jupyter / Colab / VS Code"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "duckdb>=1.1",
    "anywidget>=0.9",
    "posthog>=3.0",
    "ipywidgets>=7.0",
    "traitlets>=5.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ipykernel",
    "jupyterlab",
    "notebook",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hopscotch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # sklearn convergence/future warnings on small test datasets are expected
    "ignore::sklearn.exceptions.ConvergenceWarning",
    "ignore::FutureWarning:sklearn",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "pytest>=9.1.0",
]
